src/test/ui/const-generics/const-param-before-other-params.stderr
error: lifetime parameters must be declared prior to const parameters
  --> $DIR/const-param-before-other-params.rs:4:21
   |
LL | fn bar<const X: (), 'a>(_: &'a ()) {
   |       --------------^^- help: reorder the parameters: lifetimes, then types, then consts: `<'a, const X: ()>`

error: type parameters must be declared prior to const parameters
  --> $DIR/const-param-before-other-params.rs:8:21
   |
LL | fn foo<const X: (), T>(_: &T) {
   |       --------------^- help: reorder the parameters: lifetimes, then types, then consts: `<T, const X: ()>`

warning: the feature `const_generics` is incomplete and may cause the compiler to crash
  --> $DIR/const-param-before-other-params.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error: aborting due to 2 previous errors

